# avalone-landing

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.kimi-code/plans/: class-based-refactor.md
.kimi-code/skills/avalone-architecture/: SKILL.md
backups/: avalone_20260701_004732.db  avalone_20260701_074409.db  avalone_20260701_122129.db  avalone_20260701_122456.db  avalone_20260701_122848.db  avalone_20260701_123118.db
docs/: avalone-meta.md  identity-architecture.md  tech-stack.md  unified-platform-plan.md  work-aggregator-roadmap.md  work-v2-spec.md
infra/backup/: backup-config.json  backup_db.py
scripts/: check_glossary.py  check_hardcoded.py  fetch_jobs.py  migrate_to_unified_db.py  playwright_audit.py  pre_flight.py  translate_jobs.py
src/avalone_core/avalone_core/: database.py  db.py  device_service.py  glossary.py  glossary_db.py  glossary_service.py  referral_service.py  registry.py  ui_glossary.py
src/avalone_finance/: pyproject.toml
src/avalone_finance/core/: app_access.py  app_access_repository.py  app_access_service.py  catalog.py  config.py  constants.py  currency.py  db.py  engine.py  entry_meta.py  entry_meta_repository.py  (+23 more)
src/avalone_landing/: config.py
tests/: conftest.py  test_finance_shell.py  test_job_interactions.py  test_jobs.py  test_multi_session.py
tests/finance/: conftest.py  test_api_refactor_smoke.py  test_app_access.py  test_currency.py  test_engine_facade.py  test_entries_filter.py  test_global_settings.py  test_journal_display.py  test_no_junk.py  test_sqlledger.py  test_tenant_isolation.py  test_verify_email.py
(+68 files in other folders)
